# slack-agent

./: .env.example  .gitignore  LICENSE  docker-compose.dev.yml  docker-compose.yml  slack-app-manifest.example.json
bot/: Dockerfile  agent.py  bot.py  config.py  news_digest.py  pyproject.toml  store.py  tools.py
searxng/: settings.yml
